--- a/src/styles.css
+++ b/src/styles.css
@@ -1,30 +1,92 @@
 body {
-    margin: 0;
     background-color: #1C1C1C;
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+    text-align: center;
 }
 
 #main-container {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-    margin: 30px auto;
+    display: grid;
+    width: 550px;
+    margin: 20px auto 0px;
 }
 
 .conversion-container {
-    /* display: flex;
-    flex-direction: column; */
     background-color: #F4F4F4;
-    /* flex-grow: 1;
-    flex-basis: 0; */
     padding: 20px;
 }
 
 .header-container {
+    display: grid;
     background-color: #6943FF;
-    /* flex-grow: 1;
-    flex-basis: 0; */
+    padding: 20px 20px 20px;
 }
 
 .conversion-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: #fff;
+    margin: 20px;
+    padding: 10px;
 }
+
+
+
+#main-title {
+    color: #fff;
+    font-size: 1.5rem;
+}
+
+#input-field {
+    background-color: #6943FF;
+    border: 2px solid #B295FF;
+    border-radius: 5px;
+    color: #fff;
+    font-family: 'Inter', sans-serif;
+    font-size: 3rem;
+    font-weight: bold;
+    justify-self: center;
+    text-align: center;
+    height: 80px;
+    width: 120px;
+    margin-top: 20px;
+}
+
+.units-title {
+    color: #5A537B;
+    margin-bottom: 5px;
+}
+
+.units-output {
+    color: #353535;
+}
+
+
+#input-field:focus {
+    outline: none;
+}
+
+.btn {
+    background-color: #fff;
+    border: none;
+    border-radius: 5px;
+    color: #3D3D3D;
+    font-family: 'Inter', sans-serif;
+    justify-self: center;
+    width: 120px;
+    margin-top: 20px;
+    padding: 15px;
+}
+
+@media only screen and (max-width: 600px) {
+    #main-container {
+        width: 95%;
+    }
+ }
+/* @media only screen and (max-width: 280px) {
+    #main-container {
+        width: 280px;
+    }
+ } */
